# actix_web_practise

./: .gitignore  Cargo.toml
src/: main.rs
src/routes/: mod.rs  patient_routes.rs  practitioner_routes.rs
src/structs/: app_state.rs  custom_object.rs  mod.rs  query_params.rs
