[package]
name = "hello-actix"
version = "0.1.0"
authors = ["Alex Constantinou <a_constantinou@hotmail.co.uk>"]
edition = "2018"

[dependencies]
openssl = "0.10.23"
actix-web = { version = "1.0", features = ["ssl"] }
listenfd = "0.3"
serde = "1.0.95"
serde_json = "1.0.40"
futures = "0.1.28"
url = "1.7.2"